# party

./: README.md  README.rst  debug_oom.py  pyproject.toml  setup.cfg
experiments/: base.yaml  hybrid_neck_regression.yaml  pretraining.yaml  regression_additive_multiscale.yaml  regression_additive_multiscale_ntf.yaml  regression_additive_multiscale_prompt_corruption.yaml  regression_additive_multiscale_regularized.yaml  regression_additive_single_scale.yaml  regression_fused_main_components.yaml  regression_line_resampler_main_components.yaml  regression_locator_reader_main_components.yaml  regression_main_components.yaml  regression_multi_scale.yaml  regression_partyv2_step1_architecture.yaml  regression_partyv2_step1_cross_attention_open_gates.yaml  regression_partyv2_step1_cross_attention_open_gates_ctc.yaml  regression_partyv2_step2_architecture.yaml  regression_partyv2_step3_full_v2_regularized.yaml  regression_single_scale.yaml
party/: adapt.py  augmentation.py  configs.py  dataset.py  default_specs.py  fusion.py  model.py  party.py  sampler.py  tokenizer.py  util.py
party/cli/: __init__.py  adapt.py  ocr.py  pred.py  set_lang.py  test.py  train.py  util.py
party/contrib/: rewrite_jxl_to_jpeg.py  set_lang_recursive.py
party/modules/: __init__.py  attention.py  backbone.py  blocks.py  fusion_layer.py  hgnetv2.py  hybrid_encoder.py  kv_cache.py  noisy_teacher_forcing.py  position_embeddings.py  prompt.py  prototype.py  transformer.py
party/template/: llama_party.md
